--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "aprendiendo sass y gulp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --watch src/scss:build/css"
   },
   "author": "nico michelson",
   "license": "ISC",
   "devDependencies": {
-    "dart-sass": "^1.25.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "node-sass": "^7.0.1",
